# image-ocr

./: README.md  pyproject.toml  requirements.md
.github/: copilot-instructions.md
scripts/: README.md  download_models.py
src/: __init__.py  classifier.py  gui.py  main.py  normalizer.py  ocr_engine.py  pipeline.py  preprocessor.py
src/engines/: __init__.py  base.py  onnxocr_engine.py  paddle_engine.py  paddle_structure_engine.py  tesseract_engine.py
src/extractors/: __init__.py  invoice.py  receipt.py
tax_ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_classifier.py  test_normalizer.py  test_pipeline.py
