[project]
name = "tax-ocr"
version = "0.1.0"
description = "税務・経理書類特化型OCRエンジン - 領収書・請求書からの構造化データ抽出"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tax OCR Team"}
]
keywords = ["ocr", "receipt", "invoice", "tax", "japanese"]

dependencies = [
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0,<2.0.0",
    "jaconv>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
onnxocr = [
    "onnxruntime>=1.14.0",
    "shapely>=2.0.0",
    "pyclipper>=1.3.0",
    "scikit-image>=0.21.0",
]
paddleocr = [
    "paddleocr>=3.0.0",
    "paddlepaddle>=3.0.0",
]
all = [
    "tax-ocr[onnxocr,paddleocr]",
]

[project.scripts]
tax-ocr = "src.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
